--- a/深入理解分布式事务系列--冰河技术/深入理解分布式事务系列.md
+++ b/深入理解分布式事务系列--冰河技术/深入理解分布式事务系列.md
@@ -174,3 +174,16 @@ MySQL中的锁的分类：
 
 ## 第7讲 死锁问题
 
+死锁的必要条件：
+	互斥：一个资源只能被一个进程占用
+	不可剥夺：一个资源在被一个进程使用完毕之前不能被其他进程强行夺走
+	请求与保持：一个进程获得资源的同时又在请求其他被占用的资源
+	循环等待
+
+处理死锁的方法：
+	预防死锁：破坏造成死锁的必要条件
+	避免死锁：系统分配资源时（有序资源分配法、银行家算法）
+	检测死锁：系统运行时
+	解除死锁：检测出死锁后
+
+MySQL中的死锁问题：
