Add some notes. 2023/12/05

--- a/深入理解分布式事务系列--冰河技术/深入理解分布式事务系列.md
+++ b/深入理解分布式事务系列--冰河技术/深入理解分布式事务系列.md
@@ -25,7 +25,7 @@ CAP理论、BASE理论
 ## 第2讲 事务的特性与类型
 
 事务的特性：ACID
-	原子性（A：Atomicity）：要么全部执行、要么全部不执行（例子：转账）
+	原子性（A：Atomicity）：要么全部执行、要么全部不执行（例如：转账）
 	一致性（C：Consistency）：在事务执行之前和执行之后，数据处于一致的状态
 	隔离性（I：Isolation）：事务之间互不干扰、一个事务在执行过程中，不能看到其他事务执行过程的中间状态
 	持久性（D：Durability）：事务提交完成后，对数据的更改操作会被持久化到数据库中，不会被回滚
@@ -35,7 +35,7 @@ CAP理论、BASE理论
 	带有保存点的扁平事务
 	链式事务：（没懂）
 	嵌套事务：顶层事务、内部子事务
-	分布式事务：不同服务、不同数据库（例子：电商系统）
+	分布式事务：不同服务、不同数据库（例如：电商系统）
 
 
 
@@ -186,4 +186,51 @@ MySQL中的锁的分类：
 	检测死锁：系统运行时
 	解除死锁：检测出死锁后
 
-MySQL中的死锁问题：
+MySQL如何避免死锁：
+	通过索引检索数据
+	合理设计索引，减少锁的范围
+	减少查询条件范围，减少间隙锁的范围
+	控制事务大小，避免长事务
+	在整个事务的最后执行加锁
+	使用低级别的事务隔离级别
+
+
+
+## 第8讲 MVCC机制
+
+MVCC技术（大多数关系型数据库都实现）：解决事务并发控制问题，保证事务的隔离性
+
+MVCC的存储方式：
+	Append-Only：将历史版本数据直接存储在数据表中（例如：PostgreSQL）
+	Delta：将增量历史版本数据存储在独立的表中（例如：MySQL、Oracle）
+	Time-Travel：存储所有历史版本数据（例如：HANA）
+
+MVCC工作原理：
+	活动事务：已启动但未提交或回滚的事务
+	读已提交：（没懂）
+	可重复读：（没懂）
+
+读已提交 vs 可重复读：
+	读已提交：每个SQL语句有一个自己的快照（看到的数据不同）
+	可重复读：所有SQL语句使用同一个快照（看到的数据相同）
+
+快照优化：
+	统计最小活动事务id、最大已提交事务id
+
+
+
+## 第9讲 Redo Log基本原理
+
+Redo Log：实现原子性、持久性
+Undo Log：实现一致性
+
+Redo Log：重做日志
+
+（未完待续）
+
+
+
+## 第20讲 分布式系统架构
+
+产生背景：
+	早期业务不复杂
